--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <title>Making your first Phaser 3 Game - Part 1</title>
   <script src="lib/phaser.min.js"></script>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
     <script type="module" src="js/main.js"></script>
 </body>
 
